--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Luqman Mohamad Isa</title>
-    <link rel="icon" href="download/icon-profile.svg" type="icon type">
+    <link rel="icon" href="images/icon-profile.svg" type="icon type">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.gstatic.com">
